--- a/staging-build-config.yaml
+++ b/staging-build-config.yaml
@@ -20,5 +20,8 @@ spec:
       env:
         - name: APP_FILE
           value: ws.py
+  postCommit: {}
   source:
     type: Binary
+    binary: {}
+  runPolicy: Serial
