--- a/staging-build-config.yaml
+++ b/staging-build-config.yaml
@@ -10,6 +10,7 @@ spec:
     to:
       kind: ImageStreamTag
       name: 'python-rest-service:latest'
+  resources: {}
   strategy:
     type: Source
     sourceStrategy:
@@ -24,4 +25,4 @@ spec:
   source:
     type: Binary
     binary: {}
-  runPolicy: Serial
+ 
