--- a/staging-pipeline.yml
+++ b/staging-pipeline.yml
@@ -1,8 +1,8 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  creationTimestamp: '2022-03-01T07:15:38Z'
-  generation: 11
+  creationTimestamp: '2022-03-02T05:53:54Z'
+  generation: 2
   managedFields:
     - apiVersion: tekton.dev/v1beta1
       fieldsType: FieldsV1
@@ -16,30 +16,27 @@ metadata:
           'f:workspaces': {}
       manager: Mozilla
       operation: Update
-      time: '2022-03-01T12:40:14Z'
+      time: '2022-03-02T05:53:54Z'
   name: staging-pipeline
   namespace: pipeline
-  resourceVersion: '9497166'
-  uid: 6a4c2990-df9b-49d5-a82d-3a917ed82c1b
+  resourceVersion: '10553535'
+  uid: 00d19ec9-619b-4c9e-8923-105684a56e7f
 spec:
   params:
     - default: staging
       name: namespace
       type: string
+    - default: 'https://github.com/likhia/python-rest-service.git'
+      name: git-project
+      type: string
     - default: python-rest-service
       name: app-name
-      type: string
-    - default: ws.py
-      name: app-file
-      type: string
-    - default: empty
-      name: buildname
       type: string
   tasks:
     - name: git-clone
       params:
         - name: url
-          value: 'https://github.com/likhia/python-rest-service.git'
+          value: $(params.git-project)
         - name: revision
           value: main
         - name: submodules
@@ -62,37 +59,13 @@ spec:
         name: git-clone
       workspaces:
         - name: output
-          workspace: source
-    - name: build
+          workspace: staging-source
+        - name: ssh-directory
+          workspace: staging-source
+    - name: createbuild
       params:
         - name: SCRIPT
-          value: >-
-            oc new-build  --name=$(params.app-name)  --binary
-            --image-stream=python:latest -e APP_FILE=$(params.app-file) -n
-            $(params.namespace)
-        - name: VERSION
-          value: latest
-      runAfter:
-        - checkbuild
-      taskRef:
-        kind: ClusterTask
-        name: openshift-client
-      when:
-        - input: $(params.app-name)
-          operator: notin
-          values:
-            - $(params.buildname)
-      workspaces:
-        - name: manifest-dir
-          workspace: source
-        - name: kubeconfig-dir
-          workspace: source
-    - name: checkbuild
-      params:
-        - name: SCRIPT
-          value: >-
-            oc get bc -n $(params.namespace) -o jsonpath='{range
-            .items[*].metadata}{.name}{"\n"}{end}' | tee $(params.buildname)
+          value: oc apply -f $(params.namespace)-build-config.yaml
         - name: VERSION
           value: latest
       runAfter:
@@ -102,38 +75,31 @@ spec:
         name: openshift-client
       workspaces:
         - name: manifest-dir
-          workspace: source
+          workspace: staging-source
         - name: kubeconfig-dir
-          workspace: source
-    - name: rebuild
+          workspace: staging-source
+    - name: build
       params:
         - name: SCRIPT
           value: >-
-            oc start-build $(params.app-name) -n $(params.namespace) 
-            --from-dir=.  --follow
+            oc start-build $(params.app-name)   --from-dir=.  --follow -n
+            $(params.namespace)
         - name: VERSION
           value: latest
       runAfter:
-        - checkbuild
+        - createbuild
       taskRef:
         kind: ClusterTask
         name: openshift-client
-      when:
-        - input: $(params.buildname)
-          operator: in
-          values:
-            - $(params.app-name)
       workspaces:
         - name: manifest-dir
-          workspace: source
+          workspace: staging-source
         - name: kubeconfig-dir
-          workspace: source
-    - name: startbuild
+          workspace: staging-source
+    - name: deployment
       params:
         - name: SCRIPT
-          value: >-
-            oc start-build $(params.app-name) -n $(params.namespace) 
-            --from-dir=.  --follow
+          value: oc apply -f $(params.namespace)-deployment.yaml
         - name: VERSION
           value: latest
       runAfter:
@@ -143,31 +109,13 @@ spec:
         name: openshift-client
       workspaces:
         - name: manifest-dir
-          workspace: source
+          workspace: staging-source
         - name: kubeconfig-dir
-          workspace: source
-    - name: deployment
+          workspace: staging-source
+    - name: service
       params:
         - name: SCRIPT
-          value: >-
-            oc new-app $(params.app-name):latest -e APP_FILE=$(params.app-file)
-            -n $(params.namespace)
-        - name: VERSION
-          value: latest
-      runAfter:
-        - startbuild
-      taskRef:
-        kind: ClusterTask
-        name: openshift-client
-      workspaces:
-        - name: manifest-dir
-          workspace: source
-        - name: kubeconfig-dir
-          workspace: source
-    - name: exposeroute
-      params:
-        - name: SCRIPT
-          value: oc expose service/$(params.app-name) -n $(params.namespace)
+          value: oc apply -f $(params.namespace)-service.yaml
         - name: VERSION
           value: latest
       runAfter:
@@ -177,8 +125,24 @@ spec:
         name: openshift-client
       workspaces:
         - name: manifest-dir
-          workspace: source
+          workspace: staging-source
         - name: kubeconfig-dir
-          workspace: source
+          workspace: staging-source
+    - name: route
+      params:
+        - name: SCRIPT
+          value: 'oc apply -f $(params.namespace)-route.yaml '
+        - name: VERSION
+          value: latest
+      runAfter:
+        - service
+      taskRef:
+        kind: ClusterTask
+        name: openshift-client
+      workspaces:
+        - name: manifest-dir
+          workspace: staging-source
+        - name: kubeconfig-dir
+          workspace: staging-source
   workspaces:
-    - name: source
+    - name: staging-source
